syntax = "proto3";
package api;

import "empty.proto";

option go_package = "api/protobuf";

message NewPeripheral {
  string ownerUserId = 1;
  string deploymentId = 2;
  string hardwareId = 3;
  PeripheralType type = 4;

  enum PeripheralType {
    THERMAL = 0;
    PARTICLE = 1;
  }
}

message Peripheral {
  string ownerUserId = 1;
  string deploymentId = 2;
  string id = 3;
  string hardwareId = 4;
  PeripheralType type = 5;

  enum PeripheralType {
    THERMAL = 0;
    PARTICLE = 1;
  }
}

service PeripheralManagementService {
  rpc CreatePeripheral(NewPeripheral) returns (Peripheral);
  rpc RemovePeripheral(Peripheral) returns (Empty);
}
